tests/errors/lastclass_misuse.HC
//ERR: 'lastclass' is only valid as a default argument
I64 x=lastclass;
